# data-agent-project

./: .env.example  README.md
backend/: .gitignore  main.py  pyproject.toml  run_server.py
backend/app/agent/: llm.py
backend/app/agent/nodes/: recall_column.py  recall_metric.py  recall_value.py
backend/app/clients/: embedding_client_manager.py  es_client_manager.py  qdrant_client_manager.py
backend/app/conf/: app_config.py
backend/app/core/: lifespan.py
backend/conf/: app_config.example.yaml
backend/docker/: docker-compose.yaml
backend/docker/elasticsearch/: Dockerfile
backend/tests/: test_embedding_client_manager.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue
frontend/src/components/: ChartView.vue  InputBar.vue  MessageBubble.vue  ResultTable.vue  Sidebar.vue  StepProgress.vue  WelcomeScreen.vue
frontend/src/composables/: useChat.js  useStorage.js
frontend/src/utils/: export.js
