[project]
name = "data-agent"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "asyncmy>=0.2.11",
    "config>=0.5.1",
    "cryptography>=49.0.0",
    "elasticsearch[async]>=8,<9",
    "fastapi[standard]>=0.139.0",
    "jieba>=0.42.1",
    "langchain>=1.3.11",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.3.3",
    "langgraph>=1.2.7",
    "loguru>=0.7.3",
    "omegaconf>=2.3.1",
    "pyyaml>=6.0.3",
    "qdrant-client>=1.18.0",
    "sqlalchemy>=2.0.51",
]
